--- a/source/sass/component/_fab.scss
+++ b/source/sass/component/_fab.scss
@@ -24,7 +24,7 @@ $yAxis: (top, bottom);
 }
 
 .c-fab .c-fab__panel {
-    @extend .c-card; 
+    @extend .c-card !optional; 
     border-radius: var_border-radius.$border-radius-md;
     display: none;
     margin-bottom: map.get(var_default.$spacers, "2");
